--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,33 @@
+bokeh==1.1.0
+Click==7.0
+cloudpickle==0.8.1
 cycler==0.10.0
+dask==1.2.1
+distributed==1.27.1
+HeapDict==1.0.0
+Jinja2==2.10.1
+joblib==0.13.2
 kiwisolver==1.1.0
+locket==0.2.0
+MarkupSafe==1.1.1
 matplotlib==3.0.3
+msgpack==0.6.1
 numpy==1.16.3
+packaging==19.0
 pandas==0.24.2
+partd==0.3.10
+Pillow==6.0.0
+psutil==5.6.2
 pyparsing==2.4.0
 python-dateutil==2.8.0
 pytz==2019.1
+PyYAML==5.1
 scikit-learn==0.20.3
 scipy==1.2.1
 six==1.12.0
 sklearn==0.0
+sortedcontainers==2.1.0
+tblib==1.3.2
+toolz==0.9.0
+tornado==6.0.2
+zict==0.1.4
