--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ Send2Trash==1.5.0
 six==1.12.0
 sklearn==0.0
 sortedcontainers==2.1.0
+streamz==0.5.0
 tblib==1.3.2
 terminado==0.8.2
 testpath==0.4.2
