--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ decorator==4.4.0
 defusedxml==0.6.0
 distributed==1.27.1
 entrypoints==0.3
+extras==1.0.0
+fixtures==3.0.0
+graphviz==0.10.1
 HeapDict==1.0.0
 ipykernel==5.1.0
 ipython==7.5.0
@@ -24,7 +27,10 @@ jupyter==1.0.0
 jupyter-client==5.2.4
 jupyter-console==6.0.0
 jupyter-core==4.4.0
+jupyterlab==0.35.6
+jupyterlab-server==0.2.0
 kiwisolver==1.1.0
+linecache2==1.0.0
 locket==0.2.0
 MarkupSafe==1.1.1
 matplotlib==3.0.3
@@ -39,15 +45,19 @@ pandas==0.24.2
 pandocfilters==1.4.2
 parso==0.4.0
 partd==0.3.10
+pbr==5.2.0
+pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.0.0
 prometheus-client==0.6.0
 prompt-toolkit==2.0.9
 psutil==5.6.2
+ptyprocess==0.6.0
 Pygments==2.3.1
 pyparsing==2.4.0
 pyrsistent==0.15.1
 python-dateutil==2.8.0
+python-mimeparse==1.6.0
 pytz==2019.1
 pywinpty==0.5.5
 PyYAML==5.1
@@ -63,9 +73,12 @@ streamz==0.5.0
 tblib==1.3.2
 terminado==0.8.2
 testpath==0.4.2
+testtools==2.3.0
 toolz==0.9.0
 tornado==6.0.2
+traceback2==1.4.0
 traitlets==4.3.2
+unittest2==1.1.0
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.2
