--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ jupyterlab==0.35.6
 jupyterlab-server==0.2.0
 kiwisolver==1.1.0
 linecache2==1.0.0
+llvmlite==0.28.0
 locket==0.2.0
 MarkupSafe==1.1.1
 matplotlib==3.0.3
@@ -38,7 +39,9 @@ mistune==0.8.4
 msgpack==0.6.1
 nbconvert==5.5.0
 nbformat==4.4.0
+networkx==2.3
 notebook==5.7.8
+numba==0.43.1
 numpy==1.16.3
 packaging==19.0
 pandas==0.24.2
