--- a/kafka.config/servers/server.2.properties
+++ b/kafka.config/servers/server.2.properties
@@ -5,7 +5,7 @@ num.io.threads=8
 socket.send.buffer.bytes=102400
 socket.receive.buffer.bytes=102400
 socket.request.max.bytes=104857600
-log.dirs=/tmp/kafka-logs-2
+log.dirs=/tmp/kafka/logs-2
 num.partitions=10
 num.recovery.threads.per.data.dir=1
 offsets.topic.replication.factor=1
