--- a/kafka.config/servers/server.0.properties
+++ b/kafka.config/servers/server.0.properties
@@ -1,10 +1,13 @@
 broker.id=0
+port=9092
 num.network.threads=3
 num.io.threads=8
 socket.send.buffer.bytes=102400
 socket.receive.buffer.bytes=102400
 socket.request.max.bytes=104857600
-log.dirs=/tmp/kafka/logs-0
+# log.dirs=/tmp/kafka/logs-0
+log.dir=./run/kafka/tmp/kafka-0
+log.dirs=./run/kafka/tmp/kafka-0
 num.partitions=1
 num.recovery.threads.per.data.dir=1
 offsets.topic.replication.factor=1
