--- a/kafka.config/zookeeper.properties
+++ b/kafka.config/zookeeper.properties
@@ -12,8 +12,11 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
 # the directory where the snapshot is stored.
-dataDir=/tmp/zookeeper
+# dataDir=/tmp/zookeeper
+# dataDir=/dev/shm/zookeeper
+dataDir=./run/kafka/tmp/zookeeper
 # the port at which the clients will connect
 clientPort=2181
 # disable the per-ip limit on the number of connections since this is a non-production config
